--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TESTING</title>
-    <script src="a.out.js" ></script>
+    <script src="hello.js" ></script>
 </head>
 <body>
     
